# stl-analysis

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 01_read_and_visualize_stl.ipynb
