[tool.poetry]
name = "stl-analysis"
version = "0.1.0"
description = "Tools for processing STL files in Python, comparison, transformations, etc."
authors = ["Honza Blažek <gimli@matfyz.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
numpy-stl = "^2.13.0"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"
notebook = "^6.1.5"
scipy = "^1.5.4"
imageio = "^2.9.0"
opencv-python = "^4.4.0"
ipympl = "^0.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
